[tool.poetry]
name = "pfizerdocs"
version = "0.1.0"
description = "A web app to query the Pfizer documents"
authors = ["Phil Harper - philharper.substack.com"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
ipykernel = "^6.13.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
